--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>连云港鱼苗-江苏鱼苗-山东鱼苗-宿迁观赏鱼-沭阳鱼苗-哪里有鱼苗</title>
+<title>江苏鱼苗-桂鱼苗-观赏鱼-草鱼苗-鲫鱼苗-哪里有鱼苗</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
@@ -63,7 +63,7 @@
 									<a href="single.html"><img src="images/yumiao/guiyu2.jpg" alt="季花鱼桂鱼苗" /></a>
 								</div>
 								<div class="blog-left-right wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html">江苏，重庆，广东等地出售季花鱼桂鱼苗 </a>
+									江苏，重庆，广东等地出售季花鱼桂鱼苗 
 									<p>各种尺寸大小的季花鱼桂鱼苗 送货上门
 								</p>
 								</div>
@@ -74,7 +74,7 @@
 									<a href="single.html"><img src="images/yumiao/caoyu.jpg" alt="季花鱼桂鱼苗" /></a>
 								</div>
 								<div class="blog-left-right wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html">宿迁，连云港，徐州，山东，苏州，无锡，常州等地出售季花鱼桂鱼苗鱼</a>
+									宿迁，连云港，徐州，山东，苏州，无锡，常州等地出售季花鱼桂鱼苗鱼
 									<p> 
 									各种尺寸大小的季花鱼桂鱼苗 送货上门 送货上门
 									</p>
