--- a/src/main/resources/templates/caoyu.html
+++ b/src/main/resources/templates/caoyu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>连云港鱼苗-江苏鱼苗-山东鱼苗-宿迁观赏鱼-沭阳鱼苗-哪里有鱼苗</title>
+<title>江苏鱼苗-山东草鱼苗-常州观赏鱼-盐城鱼苗-哪里有鱼苗</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
