--- a/src/main/resources/templates/gallery2.html
+++ b/src/main/resources/templates/gallery2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>连云港鱼苗-江苏鱼苗-山东鱼苗-宿迁观赏鱼-沭阳鱼苗-哪里有鱼苗</title>
+<title>广东放生鱼苗-江苏放生桂鱼苗-山东鱼苗-哪里有放生鱼苗</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
