--- a/src/main/resources/templates/guanshang.html
+++ b/src/main/resources/templates/guanshang.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>连云港鱼苗-江苏鱼苗-山东鱼苗-宿迁观赏鱼-沭阳鱼苗-哪里有鱼苗</title>
+<title>河南鱼苗-江苏鱼苗-广东桂鱼苗-宿迁观赏鱼-哪里有鱼苗卖-求购鱼苗</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
@@ -64,7 +64,7 @@
 									<a href="single.html"><img src="images/yumiao/guangshang2.jpg" alt="观赏鱼" /></a>
 								</div>
 								<div class="blog-left-right wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html">江苏，重庆，广东等地出售观赏鱼 </a>
+									江苏，重庆，广东等地出售观赏鱼 
 									<p>各种好看的观赏鱼，红色，白色，黑色，花色应有尽有， 送货上门
 								</p>
 								</div>
@@ -72,10 +72,10 @@
 							</div>
 							<div class="blog-left">
 								<div class="blog-left-left wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html"><img src="images/yumiao/guangshang2.jpg" alt="观赏鱼" /></a>
+									<a href="single.html"><img src="images/yumiao/guanshang.jpg" alt="观赏鱼" /></a>
 								</div>
 								<div class="blog-left-right wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html">宿迁，连云港，徐州，山东，苏州，无锡，常州等地出售观赏鱼</a>
+									宿迁，连云港，徐州，山东，苏州，无锡，常州等地出售观赏鱼
 									<p> 
 									各种好看的观赏鱼，红色，白色，黑色，花色应有尽有， 送货上门
 									</p>
