--- a/src/main/resources/templates/guanshang.html
+++ b/src/main/resources/templates/guanshang.html
@@ -72,7 +72,7 @@
 							</div>
 							<div class="blog-left">
 								<div class="blog-left-left wow fadeInUp animated" data-wow-delay=".5s">
-									<a href="single.html"><img src="images/yumiao/guanshang.jpg" alt="观赏鱼" /></a>
+									<a href="single.html"><img src="images/yumiao/guangshang3.jpg" alt="观赏鱼" /></a>
 								</div>
 								<div class="blog-left-right wow fadeInUp animated" data-wow-delay=".5s">
 									宿迁，连云港，徐州，山东，苏州，无锡，常州等地出售观赏鱼
